@@ -38,13 +38,36 @@ RSpec.describe Kiba::Extend::Transforms::Count::MatchingRowsInLookup do
     generate_lookup_csv(lookup_rows)
   end
 
-  it 'merges count of lookup rows to be merged into specified field' do
-    expected = [
-      { id: '0', ct: 0 },
-      { id: '1', ct: 1 },
-      { id: '2', ct: 2 }
-    ]
-    result = execute_job(filename: test_csv, xform: Count::MatchingRowsInLookup, xformopt: xformopt)
-    expect(result).to eq(expected)
+  context 'with default result_type (:str)' do
+    it 'merges count of lookup rows to be merged into specified field as string' do
+      expected = [
+        { id: '0', ct: '0' },
+        { id: '1', ct: '1' },
+        { id: '2', ct: '2' }
+      ]
+      result = execute_job(filename: test_csv, xform: Count::MatchingRowsInLookup, xformopt: xformopt)
+      expect(result).to eq(expected)
+    end
+  end
+
+  context 'with result_type :int' do
+    let(:xformopt) do
+      {
+        lookup: lookup,
+        keycolumn: :id,
+        targetfield: :ct,
+        result_type: :int
+      }
+    end
+    it 'merges count of lookup rows to be merged into specified field as integer' do
+      expected = [
+        { id: '0', ct: 0 },
+        { id: '1', ct: 1 },
+        { id: '2', ct: 2 }
+      ]
+      result = execute_job(filename: test_csv, xform: Count::MatchingRowsInLookup, xformopt: xformopt)
+      expect(result).to eq(expected)
+    end
   end
 end
+
